--- a/source/sass/blocks/leaflet.scss
+++ b/source/sass/blocks/leaflet.scss
@@ -8,5 +8,5 @@ div.leaflet-container {
 }
 
 div.leaflet-pane {
-  transform: translate3d(-8px, 73px, 0px);
+  transform: translate3d(-8px, 73px, 0);
 }
