--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,23 +5,13 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
-  @include back-set;
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/adv/adv-desk@2x.webp");
-    @include back-set;
-    background-size: cover;
-  }
+  @include back-set;
 
   @include vp-1023 {
     height: 588px;
     background: url("../img/adv/adv-tab.webp");
-    @include back-set;
-    background-size: cover;
-  }
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/adv/adv-tab@2x.webp");
     @include back-set;
     background-size: cover;
   }
@@ -30,20 +20,39 @@
     height: auto;
     padding-bottom: 65px;
     background: url("../img/adv/adv-mob.webp");
+
     @include back-set;
     background-size: cover;
   }
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/adv/adv-mob@2x.webp");
+  @include retina {
+    background: url("../img/adv/adv-desk@2x.webp");
+
     @include back-set;
-    background-size: cover;
+    background-position: bottom;
+
+    @include vp-1023 {
+      &.retina {
+        background: url("../img/adv/adv-tab@2x.webp");
+
+        @include back-set;
+        background-position: bottom;
+      }
+    }
+
+    @include vp-767 {
+      &.retina {
+        background: url("../img/adv/adv-mob@2x.webp");
+
+        @include back-set;
+        background-position: bottom;
+      }
+    }
   }
 }
 
 .advantages__container {
   max-width: 1366px;
-  padding: 0 103px;
   padding: 0 103px 120px;
   display: flex;
   flex-direction: column;
@@ -84,6 +93,7 @@
   @include vp-1023 {
     gap: 30px;
   }
+
   @include vp-767 {
     grid-template-columns: 100%;
   }
