--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -5,28 +5,43 @@
   background: url("../img/book/book-desk.webp");
   z-index: 0;
   overflow: hidden;
-  @include back-set;
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/book/book-desk@2x.webp");
-  }
+  @include back-set;
 
   @include vp-1023 {
     min-height: 805px;
     background: url("../img/book/book-tab.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background: url("../img/book/book-tab@2x.webp");
+    background-size: cover;
+    background-position: bottom;
   }
 
   @include vp-767 {
     min-height: 760px;
     background: url("../img/book/book-mob.webp");
+    background-size: cover;
+    background-position: bottom;
   }
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/book/book-mob@2x.webp");
+  @include retina {
+    background: url("../img/book/book-desk@2x.webp");
+    background-position: bottom;
+    background-size: cover;
+
+    @include vp-1023 {
+      &.retina {
+        background: url("../img/book/book-tab@2x.webp");
+        background-position: bottom;
+        background-size: cover;
+      }
+    }
+
+    @include vp-767 {
+      &.retina {
+        background: url("../img/book/book-mob@2x.webp");
+        background-position: bottom;
+        background-size: cover;
+      }
+    }
   }
 }
 
@@ -54,8 +69,9 @@
   margin-top: 162px;
 
   @include vp-1023 {
-    margin-top: 0px;
+    margin-top: 0;
     padding: 0 129px;
+    text-align: center;
   }
 
   @include vp-767 {
