--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -76,18 +76,28 @@ header {
   }
 }
 
-.header__logo-svg--opened {
+.header__logo-svg {
+  fill: $color-off-white;
+
+  @include vp-1023 {
+    width: 38px;
+    height: 20px;
+  }
+
   @include vp-767 {
-    // fill: $color-navy;
-    position: absolute;
-    left: 0;
     width: 42px;
     height: 22px;
   }
 }
 
-.header__logo-svg {
-  fill: $color-off-white;
+.header__logo-svg--opened {
+  @include vp-767 {
+    position: absolute;
+    left: 15px;
+    top: 20px;
+    width: 42px;
+    height: 22px;
+  }
 }
 
 .header__nav-list {
@@ -168,7 +178,6 @@ header {
   white-space: nowrap;
   border: 0;
   clip: rect(0 0 0 0);
-  -webkit-clip-path: inset(100%);
   clip-path: inset(100%);
 
   @include vp-767 {
