--- a/source/sass/blocks/promo-block.scss
+++ b/source/sass/blocks/promo-block.scss
@@ -82,12 +82,8 @@
   height: 301px;
   margin-left: 20px;
   background: url("../img/promo/promo-desk.webp");
-  @include back-set;
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/promo/promo-desk@2x.webp");
-    @include back-set;
-  }
+  @include back-set;
 
   @include vp-1023 {
     width: auto;
@@ -95,11 +91,7 @@
     height: 174px;
     margin-left: 12px;
     background: url("../img/promo/promo-tab.webp");
-    @include back-set;
-  }
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/promo/promo-tab@2x.webp");
     @include back-set;
   }
 
@@ -109,13 +101,34 @@
     max-width: 100%;
     margin-left: 0;
     background: url("../img/promo/promo-mob.webp");
+
     @include back-set;
     background-size: auto;
     background-repeat: no-repeat;
   }
 
-  @media (min-resolution: 2dppx) {
-    background: url("../img/promo/promo-mob@2x.webp");
+  @include retina {
+    background: url("../img/promo/promo-desk@2x.webp");
+
     @include back-set;
+    background-size: cover;
+    background-position: center;
+
+    @include vp-1023 {
+      &.retina {
+        background: url("../img/promo/promo-tab@2x.webp");
+
+        @include back-set;
+      }
+    }
+
+    @include vp-767 {
+      &.retina {
+        background: url("../img/promo/promo-mob@2x.webp");
+
+        @include back-set;
+        background-size: auto;
+      }
+    }
   }
 }
