--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -18,6 +18,7 @@ html {
   line-height: 24px;
   font-family: "Montserrat", "Verdana", sans-serif;
   color: $color-navy;
+  scroll-behavior: smooth;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
