--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -140,7 +140,7 @@
   }
 }
 
-.ship::before {
+.advantages__ship::before {
   top: 28px;
   content: url("../img/svg/ship.svg");
   position: absolute;
@@ -153,7 +153,7 @@
   }
 }
 
-.tick::before {
+.advantages__tick::before {
   top: 28px;
   content: url("../img/svg/tick.svg");
   position: absolute;
@@ -166,7 +166,7 @@
   }
 }
 
-.boat::before {
+.advantages__boat::before {
   top: 28px;
   content: url("../img/svg/boat.svg");
   position: absolute;
