--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -36,9 +36,9 @@ header {
     flex-direction: column;
     align-content: flex-start;
     justify-content: flex-start;
-    max-width: 285px;
-    min-height: 568px;
-    position: absolute;
+    min-height: -webkit-fill-available;
+    width: 89%;
+    position: fixed;
     right: 0;
   }
 }
