--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,4 +1,4 @@
-footer {
+.footer {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -10,7 +10,7 @@ footer {
   }
 }
 
-.footer {
+.footer__container {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
