--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,4 +1,4 @@
-header {
+.header {
   position: absolute;
   width: 100%;
   display: flex;
@@ -6,7 +6,7 @@ header {
   justify-content: center;
 }
 
-.header {
+.header__container {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
@@ -30,13 +30,13 @@ header {
   }
 }
 
-.header--opened {
+.header__container--opened {
   @include vp-767 {
     background-color: $color-off-white;
     flex-direction: column;
     align-content: flex-start;
     justify-content: flex-start;
-    min-height: -webkit-fill-available;
+    min-height: fill-available;
     width: 89%;
     position: fixed;
     right: 0;
