--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,7 +12,7 @@ $color-transparent: rgba(255, 255, 255, 0);
 
 $color-neon-blue: #2c39f2;
 $color-torch-red: #ff1553;
-$color-deep-sky-blue: #0080ff;
+$color-deep-sky-blue: #c1ced7;
 $color-off-white: #f9fbfd;
 $color-navy: #011c40;
 
