--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,6 +1,7 @@
 .advantages {
   width: 100%;
-  background: url("../img/adv/adv-desk.webp");
+  background-color: $color-deep-sky-blue;
+  background-image: url("../img/adv/adv-desk.webp");
   z-index: 0;
   overflow: hidden;
   display: flex;
@@ -10,7 +11,8 @@
 
   @include vp-1023 {
     height: 588px;
-    background: url("../img/adv/adv-tab.webp");
+    background-color: $color-deep-sky-blue;
+    background-image: url("../img/adv/adv-tab.webp");
 
     @include back-set;
     background-size: cover;
@@ -19,21 +21,24 @@
   @include vp-767 {
     height: auto;
     padding-bottom: 65px;
-    background: url("../img/adv/adv-mob.webp");
+    background-color: $color-deep-sky-blue;
+    background-image: url("../img/adv/adv-mob.webp");
 
     @include back-set;
     background-size: cover;
   }
 
   @include retina {
-    background: url("../img/adv/adv-desk@2x.webp");
+    background-color: $color-deep-sky-blue;
+    background-image: url("../img/adv/adv-desk@2x.webp");
 
     @include back-set;
     background-position: bottom;
 
     @include vp-1023 {
       &.retina {
-        background: url("../img/adv/adv-tab@2x.webp");
+        background-color: $color-deep-sky-blue;
+        background-image: url("../img/adv/adv-tab@2x.webp");
 
         @include back-set;
         background-position: bottom;
@@ -42,7 +47,8 @@
 
     @include vp-767 {
       &.retina {
-        background: url("../img/adv/adv-mob@2x.webp");
+        background-color: $color-deep-sky-blue;
+        background-image: url("../img/adv/adv-mob@2x.webp");
 
         @include back-set;
         background-position: bottom;
