--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -2,7 +2,8 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  background: url("../img/book/book-desk.webp");
+  background-color: $color-sky-blue;
+  background-image: url("../img/book/book-desk.webp");
   z-index: 0;
   overflow: hidden;
 
@@ -10,26 +11,30 @@
 
   @include vp-1023 {
     min-height: 805px;
-    background: url("../img/book/book-tab.webp");
+    background-color: $color-sky-blue;
+    background-image: url("../img/book/book-tab.webp");
     background-size: cover;
     background-position: bottom;
   }
 
   @include vp-767 {
     min-height: 760px;
-    background: url("../img/book/book-mob.webp");
+    background-color: $color-sky-blue;
+    background-image: url("../img/book/book-mob.webp");
     background-size: cover;
     background-position: bottom;
   }
 
   @include retina {
-    background: url("../img/book/book-desk@2x.webp");
+    background-color: $color-sky-blue;
+    background-image: url("../img/book/book-desk@2x.webp");
     background-position: bottom;
     background-size: cover;
 
     @include vp-1023 {
       &.retina {
-        background: url("../img/book/book-tab@2x.webp");
+        background-color: $color-sky-blue;
+        background-image: url("../img/book/book-tab@2x.webp");
         background-position: bottom;
         background-size: cover;
       }
@@ -37,7 +42,8 @@
 
     @include vp-767 {
       &.retina {
-        background: url("../img/book/book-mob@2x.webp");
+        background-color: $color-sky-blue;
+        background-image: url("../img/book/book-mob@2x.webp");
         background-position: bottom;
         background-size: cover;
       }
