--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,6 +13,8 @@ $color-transparent: rgba(255, 255, 255, 0);
 $color-neon-blue: #2c39f2;
 $color-torch-red: #ff1553;
 $color-deep-sky-blue: #c1ced7;
+$color-sky: #477eba;
+$color-sky-blue: #a6caf0;
 $color-off-white: #f9fbfd;
 $color-navy: #011c40;
 
