--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -62,241 +62,193 @@
 
 .catalog__item-1 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-1.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-1.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-1.webp" 1x,
+    "../img/prod-desk/prod-desk-1@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-1.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-1@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-1.webp" 1x,
+      "../img/prod-tab/prod-tab-1@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-1.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-1@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-1.webp" 1x,
+      "../img/prod-mob/prod-mob-1@2x.webp" 2x
+    );
   }
 }
 
 .catalog__item-2 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-1.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-1.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-1.webp" 1x,
+    "../img/prod-desk/prod-desk-1@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-1.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-1@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-1.webp" 1x,
+      "../img/prod-tab/prod-tab-1@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-1.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-1@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-1.webp" 1x,
+      "../img/prod-mob/prod-mob-1@2x.webp" 2x
+    );
   }
 }
 
 .catalog__item-3 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-3.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-3.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-3.webp" 1x,
+    "../img/prod-desk/prod-desk-3@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-3.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-3@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-3.webp" 1x,
+      "../img/prod-tab/prod-tab-3@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-3.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-3@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-3.webp" 1x,
+      "../img/prod-mob/prod-mob-3@2x.webp" 2x
+    );
   }
 }
 
 .catalog__item-4 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-4.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-4.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-4.webp" 1x,
+    "../img/prod-desk/prod-desk-4@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-4.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-4@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-4.webp" 1x,
+      "../img/prod-tab/prod-tab-4@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-4.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-4@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-4.webp" 1x,
+      "../img/prod-mob/prod-mob-4@2x.webp" 2x
+    );
   }
 }
 
 .catalog__item-5 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-5.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-5.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-5.webp" 1x,
+    "../img/prod-desk/prod-desk-5@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-5.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-5@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-5.webp" 1x,
+      "../img/prod-tab/prod-tab-5@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-5.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-5@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-5.webp" 1x,
+      "../img/prod-mob/prod-mob-5@2x.webp" 2x
+    );
   }
 }
 
 .catalog__item-6 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-6.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-6.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-6.webp" 1x,
+    "../img/prod-desk/prod-desk-6@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-6.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-6@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-6.webp" 1x,
+      "../img/prod-tab/prod-tab-6@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-6.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-6@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-6.webp" 1x,
+      "../img/prod-mob/prod-mob-6@2x.webp" 2x
+    );
   }
 }
 
 .catalog__item-7 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-7.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-7.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-7.webp" 1x,
+    "../img/prod-desk/prod-desk-7@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-7.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-7@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-7.webp" 1x,
+      "../img/prod-tab/prod-tab-7@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-7.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-7@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-7.webp" 1x,
+      "../img/prod-mob/prod-mob-7@2x.webp" 2x
+    );
   }
 }
 
 .catalog__item-8 {
   background-color: $color-deep-sky-blue;
-  background-image: url("../img/prod-desk/prod-desk-8.webp");
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-desk/prod-desk-8.webpk@2x.webp");
-  }
+  background-image: image-set(
+    "../img/prod-desk/prod-desk-8.webp" 1x,
+    "../img/prod-desk/prod-desk-8@2x.webp" 2x
+  );
 
   @include vp-1023 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-8.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-tab/prod-tab-8@2x.webp");
+    background-image: image-set(
+      "../img/prod-tab/prod-tab-8.webp" 1x,
+      "../img/prod-tab/prod-tab-8@2x.webp" 2x
+    );
   }
 
   @include vp-767 {
     background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-8.webp");
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-color: $color-deep-sky-blue;
-    background-image: url("../img/prod-mob/prod-mob-8@2x.webp");
+    background-image: image-set(
+      "../img/prod-mob/prod-mob-8.webp" 1x,
+      "../img/prod-mob/prod-mob-8@2x.webp" 2x
+    );
   }
 }
 
@@ -310,6 +262,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @include vp-1023 {
+    padding: 28px 35px 35px;
+  }
 
   @include vp-767 {
     padding: 28px 25px 35px;
@@ -364,7 +320,7 @@
   }
 }
 
-.catalog__item .catalog__preview {
+.catalog__preview {
   @include catalog-set;
   @include back-set;
   background-size: 100% 100%;
