--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -29,7 +29,6 @@
   max-width: 560px;
   width: 100%;
   height: 306px;
-  background-color: $color-deep-sky-blue;
 
   @include vp-1023 {
     margin-right: 25px;
@@ -101,4 +100,19 @@
   position: absolute;
   content: url("../img/svg/phone.svg");
   left: -28px;
+}
+
+.contacts__map-leaflet {
+  background-color: $color-deep-sky-blue;
+  background-image: url("../img/map-desk.webp");
+
+  @include back-set;
+
+  @include vp-1023 {
+    background-image: url("../img/map-tab.webp");
+  }
+
+  @include vp-767 {
+    background-image: url("../img/map-mob.webp");
+  }
 }
