--- a/source/sass/blocks/leaflet.scss
+++ b/source/sass/blocks/leaflet.scss
@@ -9,4 +9,12 @@ div.leaflet-container {
 
 div.leaflet-pane {
   transform: translate3d(-8px, 73px, 0);
+
+  @include vp-1023 {
+    transform: translate3d(-136px, -4px, 0);
+  }
+
+  @include vp-767 {
+    transform: translate3d(-138px, 4px, 0);
+  }
 }
