--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -59,7 +59,7 @@
 
 .advantages__container {
   max-width: 1366px;
-  padding: 0 103px 120px;
+  padding: 0 7.5% 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
