--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -35,7 +35,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1366px;
-  padding: 0 103px;
+  padding: 0 7.5%;
 
   @include vp-1023 {
     padding: 0 45px;
@@ -51,11 +51,11 @@
 .footer__navigation-list {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 
   @include vp-767 {
     flex-direction: column;
     margin-top: 40px;
-    margin-bottom: 15px;
     align-items: flex-start;
   }
 }
@@ -126,10 +126,29 @@
   }
 }
 
+.footer__other-link {
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+}
+
 .footer__other-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 21px;
+  padding: 10px 0;
 
   @include vp-1023 {
     gap: 21px;
