--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,8 +2,12 @@
   position: absolute;
   width: 100%;
   display: flex;
-  z-index: 1;
+  z-index: 1000;
   justify-content: center;
+
+  @include vp-767 {
+    position: relative;
+  }
 }
 
 .header__container {
@@ -30,6 +34,16 @@
   }
 }
 
+.header__container--no-js {
+  @include vp-767 {
+    position: relative;
+    width: 100%;
+    background-color: $color-off-white;
+    justify-content: end;
+    margin-bottom: 30px;
+  }
+}
+
 .header__container--opened {
   @include vp-767 {
     background-color: $color-off-white;
@@ -40,6 +54,8 @@
     width: 89%;
     position: fixed;
     right: 0;
+    height: 100%;
+    overflow-y: auto;
   }
 }
 
@@ -58,24 +74,6 @@
   }
 }
 
-.header__logo-link {
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:focus {
-    opacity: 0.8;
-  }
-
-  &:active {
-    opacity: 0.8;
-  }
-
-  &:focus-visible {
-    outline: none;
-  }
-}
-
 .header__logo-svg {
   fill: $color-off-white;
 
@@ -87,10 +85,13 @@
   @include vp-767 {
     width: 42px;
     height: 22px;
+    fill: $color-navy;
   }
 }
 
 .header__logo-svg--opened {
+  fill: $color-off-white;
+
   @include vp-767 {
     position: absolute;
     left: 15px;
@@ -105,17 +106,30 @@
   width: 100%;
   margin-top: 10px;
   color: $color-off-white;
+  flex-wrap: wrap;
 
   @include vp-1023 {
     margin-top: 0;
   }
 
   @include vp-767 {
+    flex-direction: column;
     display: none;
   }
 }
 
+.header__nav-list--no-js {
+  display: flex;
+
+  @include vp-767 {
+    display: block;
+  }
+}
+
 .header__nav-list--opened {
+  display: flex;
+  flex-direction: row;
+
   @include vp-767 {
     display: flex;
     flex-direction: column;
@@ -145,7 +159,7 @@
   }
 
   @include vp-767 {
-    color: inherit;
+    color: $color-navy;
     font-size: 18px;
     line-height: 22px;
   }
@@ -184,7 +198,6 @@
     width: auto;
     height: auto;
     margin: 0;
-    overflow: auto;
     clip-path: none;
     clip: auto;
     right: 0;
@@ -219,4 +232,17 @@
   position: absolute;
   top: 14px;
   right: 5px;
+}
+
+.wrapper__overlay {
+  display: none;
+
+  @include vp-767 {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+  }
 }
