--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -62,11 +62,15 @@
 
 .catalog__item {
   position: relative;
-  min-height: 386px;
   overflow: auto;
+  aspect-ratio: 260/386;
 
   @include vp-1023 {
-    min-height: 386px;
+    aspect-ratio: 309/386;
+  }
+
+  @include vp-767 {
+    aspect-ratio: 270/386;
   }
 }
 
