--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -33,7 +33,8 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  margin-top: 63px;
   max-width: 1366px;
   padding: 0 7.5%;
 
@@ -50,7 +51,7 @@
 
 .footer__navigation-list {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
 
   @include vp-767 {
@@ -74,7 +75,7 @@
   }
 }
 
-.footer__navigation-item:first-child {
+.footer-logo {
   margin-right: 30px;
 
   @include vp-1023 {
