--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -12,7 +12,6 @@
 
 .header__container {
   display: flex;
-  flex-wrap: wrap;
   width: 100%;
   max-width: 1366px;
   min-height: 100px;
@@ -61,6 +60,7 @@
 
 .header__logo {
   margin-top: 10px;
+  margin-right: 30px;
 
   @include vp-1023 {
     width: 38px;
@@ -71,6 +71,7 @@
   @include vp-767 {
     width: 42px;
     height: 22px;
+    flex-shrink: 0;
   }
 }
 
@@ -242,7 +243,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 43, 102, 0.5);
     z-index: 1;
   }
 }
