--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -45,10 +45,6 @@
   width: 100%;
   padding: 0 15px;
 
-  @include vp-1279 {
-    gap: 2%;
-  }
-
   @include vp-1023 {
     grid-template-columns: 1fr 1fr;
     gap: 30px;
@@ -62,11 +58,15 @@
 
 .catalog__item {
   position: relative;
-  min-height: 386px;
   overflow: auto;
+  aspect-ratio: 260/386;
 
   @include vp-1023 {
-    min-height: 386px;
+    aspect-ratio: 309/386;
+  }
+
+  @include vp-767 {
+    aspect-ratio: 270/386;
   }
 }
 
