--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,7 +1,6 @@
 .footer {
   width: 100%;
   display: flex;
-  justify-content: center;
   background-color: $color-navy;
   min-height: 138px;
 
@@ -16,24 +15,22 @@
   flex-wrap: wrap;
   background-color: $color-navy;
   max-width: 1366px;
-  min-height: 138px;
-  align-items: center;
+  margin-top: 47px;
 
   @include vp-1023 {
-    min-height: 120px;
     padding-top: 0;
   }
 
   @include vp-767 {
     align-items: flex-start;
+    margin-top: 42px;
   }
 }
 
 .footer__navigation {
   display: flex;
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   max-width: 1366px;
   padding: 0 7.5%;
 
@@ -50,13 +47,13 @@
 
 .footer__navigation-list {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
 
   @include vp-767 {
     flex-direction: column;
-    margin-top: 40px;
     align-items: flex-start;
+    margin-bottom: 11px;
   }
 }
 
@@ -74,7 +71,7 @@
   }
 }
 
-.footer__navigation-item:first-child {
+.footer-logo {
   margin-right: 30px;
 
   @include vp-1023 {
@@ -148,7 +145,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 21px;
-  padding: 10px 0;
 
   @include vp-1023 {
     gap: 21px;
@@ -178,5 +174,21 @@
   @include vp-1023 {
     width: 16px;
     height: 16px;
+  }
+}
+
+.footer__navigation-div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: flex-start;
+  margin-top: 10px;
+
+  @include vp-1023 {
+    margin-top: 0;
+  }
+
+  @include vp-767 {
+    flex-direction: column;
   }
 }
