внесены правки после теста3

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -15,7 +15,8 @@
   width: 100%;
   max-width: 1366px;
   min-height: 100px;
-  align-items: center;
+  align-content: start;
+  padding-top: 23px;
   justify-content: space-between;
   padding-left: 103px;
   padding-right: 81px;
@@ -24,6 +25,7 @@
     padding-left: 45px;
     padding-right: 32px;
     min-height: 80px;
+    padding-top: 18px;
   }
 
   @include vp-767 {
@@ -47,7 +49,7 @@
   @include vp-767 {
     background-color: $color-off-white;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: flex-start;
     min-height: fill-available;
     width: 89%;
@@ -65,13 +67,14 @@
   @include vp-1023 {
     width: 38px;
     height: 20px;
-    margin-top: 0;
+    margin-top: 13px;
   }
 
   @include vp-767 {
     width: 42px;
     height: 22px;
     flex-shrink: 0;
+    margin-top: 0;
   }
 }
 
@@ -99,6 +102,13 @@
     top: 20px;
     width: 42px;
     height: 22px;
+  }
+}
+
+.header__nav-list-wrapper {
+  @include vp-767 {
+    display: flex;
+    width: 100%;
   }
 }
 
@@ -163,6 +173,8 @@
     color: $color-navy;
     font-size: 18px;
     line-height: 22px;
+    width: 100%;
+    display: flex;
   }
 
   &:hover {
