внесены правки после теста4

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -52,7 +52,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     min-height: fill-available;
-    width: 89%;
+    width: 285px;
     position: fixed;
     right: 0;
     height: 100%;
